aks/istio.jjwebcore.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jjwebcore-app
spec:
  hosts:
  - "*"
  gateways:
  - jjwebcore-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jjwebcore.default.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jjwebcore-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
